<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="320dp"
        android:layout_marginEnd="@dimen/list_sub_item_spacing"
        android:layout_marginTop="@dimen/list_sub_item_spacing"
        android:layout_marginBottom="@dimen/list_item_spacing"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/light_ash"
        app:cardCornerRadius="@dimen/card_radius_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/item_padding">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/course_card_preview_height"
                app:cardCornerRadius="@dimen/card_radius_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/course_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cd_course_preview_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/placeholder_loading" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/course_teacher"
                style="@style/TextStyle.PageTitleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_padding"
                android:lines="1"
                android:paddingBottom="@dimen/card_item_padding"
                android:text="Jhone Smith,Virat Kohli"
                android:textColor="@color/dark_ash"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/course_title"
                app:layout_constraintTop_toBottomOf="@+id/course_title" />

            <TextView
                android:id="@+id/students_enrolled"
                style="@style/TextStyle.PageTitleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_item_padding"
                android:layout_marginEnd="@dimen/item_padding"
                android:paddingBottom="@dimen/card_item_padding"
                android:text="@string/dummy_student_count"
                android:textSize="12sp"
                android:textColor="@color/dark_ash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/course_teacher"
                app:layout_constraintTop_toBottomOf="@+id/course_teacher" />



            <TextView
                android:id="@+id/duration"
                style="@style/TextStyle.CardContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_padding"
                android:text="@string/dummy_duration"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/students_enrolled"
                app:layout_constraintTop_toBottomOf="@id/students_enrolled"
                />

            <TextView
                android:id="@+id/course_title"
                style="@style/TextStyle.CardTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_padding"
                android:maxLength="49"
                android:lines="2"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/item_padding"
                android:paddingBottom="@dimen/card_item_padding"
                android:textSize="14dp"
                android:text="@string/dummy_title"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView5"
                app:layout_constraintTop_toBottomOf="@+id/cardView5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/previousPrice"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_dp_32"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/strikethrough_shape"
                android:text="৳4,999"
                android:textSize="12sp"

                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/cost_container"
                app:layout_constraintStart_toEndOf="@+id/cost_container"
                app:layout_constraintTop_toTopOf="@+id/cost_container" />


            <ImageView
                android:id="@+id/heart_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/item_padding"
                android:contentDescription="@string/cd_wishlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/course_title"
                app:srcCompat="@drawable/ic_heart_outlined"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/cart_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="@dimen/item_padding"
                android:contentDescription="@string/cd_wishlist"
                app:layout_constraintBottom_toBottomOf="@+id/cost_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cost_container"
                app:srcCompat="@drawable/ic_cart_icon"
                app:tint="@color/red" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cost_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/duration"
                app:layout_constraintTop_toBottomOf="@+id/duration">

                <TextView
                    android:id="@+id/price"
                    style="@style/TextStyle.CardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="8dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
                    android:text="@string/dummy_cost"
                    android:textSize="12sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>